same issue Telemetry, push-1

--- a/notion-clone-frontend-next14/package.json
+++ b/notion-clone-frontend-next14/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.5.0",
+    "@google-cloud/firestore": "^7.10.0",
+    "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.1",
     "lucide-react": "^0.460.0",
     "next": "14.2.5",
     "react": "^18",
